# broadmail

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitgnore  Dockerfile  alembic.ini  broadmail.db  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_template_mode.py
backend/app/: main.py
backend/app/analytics/: models.py  router.py  schemas.py  service.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/campaigns/: models.py  router.py  schemas.py  service.py
backend/app/contacts/: models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  rate_limit.py  security.py
backend/app/scripts/: create_admin.py
backend/app/sending/: dispatcher.py  provider.py  resend_provider.py  run_worker.py  smtp_provider.py  worker.py
backend/app/templates/: models.py  router.py  schemas.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/app/webhooks/: router.py  service.py
backend/tests/: conftest.py  test_auth.py  test_campaigns.py  test_contacts.py  test_sending.py
docs/: README.md
docs/api/: routes.md
docs/architecture/: overview.md
docs/backend/: database.md  modules.md
docs/deployment/: deploy.md  production-gaps.md
docs/frontend/: pages.md
docs/testing/: testing.md
frontend/: .env.local.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
(+187 files in other folders)
